--- a/notes/TODO.txt
+++ b/notes/TODO.txt
@@ -1,3 +1,1 @@
-1. Flying level 4: after the Death skull appears, rocket engine ambience can be turned back on if you pause and then unpause
-
-2. Make skip-cutscene dev tool for BossMode and Exploring
+1. Make drawHitboxes-method for bossMode
